--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mysql1: ^0.20.0
   provider: ^6.0.5
   firebase_core: ^2.13.0
+  cloud_firestore: ^4.8.0
 
 dev_dependencies:
   flutter_test:
